@@ -71,7 +71,7 @@ public:
                                            VAbstractPattern *doc, VContainer *data);
     static VToolCurveIntersectAxis *Create(VToolCurveIntersectAxisInitData &initData);
 
-    static QPointF FindPoint(const QPointF &point, qreal angle, const QSharedPointer<VAbstractCurve> &curve);
+    static QPointF FindPoint(const QPointF &point, qreal angle, const QVector<QPointF> &curvePoints);
 
     static const QString ToolType;
     virtual int       type() const Q_DECL_OVERRIDE {return Type;}
